# autoread-dotenv

./: .env.example  .env.template  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  Justfile  justfile  license.md  makefile  pyproject copy.toml  pyproject.toml
.github/: FUNDING.yaml  dependabot.yaml  dependabot.yml  funding.yaml  funding.yml
.github/workflows/: constraints.txt  dependabot-auto-merge.yaml  lint.yaml  linting.yaml  testing.yaml
.just/: bandit.justfile  dir-structure.justfile  dotenv.justfile  gh.justfile  ipython.justfile  just.justfile  mypy.justfile  pre-commit.justfile  project.justfile  pylint.justfile  pyroma.justfile  pytest.justfile  readthedocs.justfile  ruff.justfile  safety.justfile  sphinx.justfile  sshx.justfile  ty.justfile  uv.justfile
.make/: 03-dotenv.mk  03-pip.mk  04-pip.mk  10-pep8.mak  10-pep8.mk  11-mypy.mk  13-pylint.mk  15-bandit.mk  15-dotenv.mk  16-ruff.mk  18-pyroma.mk  20-pytest.mk  25-sphinx.mak  25-sphinx.mk  30-pre-commit.mk  55-poetry.mak  55-poetry.mk
docs/: changes.md  changes.rst  conf.py  contributing.md  index.rst  license.md  readme.md  readme.rst  requirements.txt  security.md
docs/modules/autoread_dotenv/: index.rst
docs/modules/autoread_dotenv/about/: index.rst
docs/modules/autoread_dotenv/autoread/: index.rst
docs/modules/autoread_dotenv/patch/: index.rst
docs/modules/autoread_dotenv/utils/: index.rst
docs/modules/autoread_dotenv/warnings/: index.rst
etc/: requirements.txt
src/autoread_dotenv/: __init__.py  __meta__.py  __metadata__.py  about.py  autoread.py  py.typed  utils.py  warnings.py
tests/: conftest.py  test_about.py  test_autoread.py  test_entrypoints.py  test_get_env_path.py  test_init.py  test_meta.py  test_warnings.py
